css/style.css
html{
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
*, *:before, *:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
  }
body{
	background-color: #f5f5f4;
	color: #262625;
	font-family: 'Raleway', sans-serif;		
}
p{
	text-align: center;
}
a{
	text-decoration: none;
}
h3{
	font-weight: 100;
}
#main{
	width: 70%;
	height: 100vh;
	margin: 0 auto;
	background-color: #fff;
	position: relative;
			
}

.head__section{
	width: 100%;
	text-align: center;
	border-bottom: 1px solid #ccc;
}
.head__section img{
	height: 200px;
	border-radius: 50%;
}


.body__section{
	width: 100%;
	padding: 50px;
	line-height: 30px; 
	letter-spacing: 1px;
	word-spacing: 3px;
	text-align: center;
}
.message{
	padding: 5px 10px;
	border: 1px solid #aaa;
	color: #aaa;
}

.social__section{
	width: 400px;
	position: absolute;
	display: block;
	bottom: 0;	
	left: 0;
	right: 0;
	margin-left: auto;
	margin-right: auto;
	padding: 20px;
}
.social__section a{
	display: inline-block;
	padding: 10px 30px;
}
.fa{
	color: #aaa;
}

/* mobile-responsiveness */
@media (max-width: 500px){
	#main{
		width: 100%;
		height: 100vh;
		margin: 0 auto;
		background-color: #fff;
		position: relative;	
	}

	.social__section{
		width: 300px;
	}
	.social__section a{
		padding: 10px 15px ;
	}
}

